@@ -1,7 +1,0 @@
-[database]
-db_hostname = "localhost"
-db_port = "3306"
-db_name = "webzash"
-db_username = "root"
-db_password = ""
-
